--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -54,12 +54,12 @@ Este manual del programador tiene como objetivo ayudar a las personas futuras qu
 \begin{itemize}
 	\tightlist
 	\item Flutter.
-	\item Visual Studio Code.
 	\item Android Studio.
+	\item Visual Studio Code.
 	\item Git.
 \end{itemize}
 
-\subsection{Flutter}
+\subsection{Flutter:}
 Es un SDK de código abierto creado por Google. Ofrece la versatilidad de crear aplicaciones móviles tanto como para \emph{iOS} y \emph{Android}, pero también para el entorno web. Internamente el lenguaje de programación es Dart.js, un \emph{framework}, que también es \emph{Open Source} desarrollado por Google, ya que pretende mejorar algunas de las carencias que tiene \emph{javascript}.
 
 Para la instalación de Flutter debemos de ir a su \href{https://flutter.dev/docs/get-started/install}{web oficial} y descargarlo, dependiendo del sistema operativo que tengamos usaremos una versión u otra. (v.17.5 \emph{stable}).
@@ -69,6 +69,31 @@ Al descomprimir el fichero nos daremos cuenta de que tenemos un directorio (no e
 Una vez tengamos el paso anterior debemos de actualizar las variables de usuario, apuntando al directorio bin de la ruta anterior, como vemos en la siguiente imagen:
 
 \imagen{techprog/variablesEntorno.jpg}{Variables entorno}
+
+\subsection{Android Studio:}
+Es el IDE oficial de Google, que remplaza a Eclipse, basado en \emph{IntelliJ IDEA}, publicado de manera gratuita con Licencia Apache 2.0.
+
+En nuestro caso, no programaremos en este IDE, ya que es complicado trabajar con Flutter directamente, solo lo vamos a utilizar para la creación de las máquinas virtuales para emular el sistema operativo Android. Por lo que descargamos de la \href{https://developer.android.com/studio}{web oficial Android Studio} e instalamos.
+
+Una vez lo tengamos instalado creamos las máquinas virtuales, para ello nos vamos a la barra de herramientas Tools>AVD manager y creamos las que sean necesarias, en mi caso tengo dos, con Andorid R, que es la versión 10 de sistema operativo, ya que es la última estable que nos ofrece el IDE.
+\imagen{techprog/vm.jpg}{Máquinas virtuales}
+
+\subsection{Visual Studio Code:}
+Es el editor de código creado por Microsoft, permite mucha versatilidad y es eficiente para la edición del código en flutter. Es de código abierto bajo la licencia MIT.
+
+Lo podemos descargar de la \href{https://code.visualstudio.com/}{web VS Code}.
+
+Una vez lo tengamos instalado, procedemos a instalar los siguiente \emph{Snippets} que nos ayudan a la creación del código, ya que son como los atajos de teclado. En cada uno de los enlaces, podemos ver una descripción de que es lo que hace cada una de estas herramientas:
+
+\begin{itemize}
+	\tightlist
+	\item \href{https://marketplace.visualstudio.com/items?itemName=Nash.awesome-flutter-snippets}{Awesome Flutter Snippets}. Apache 2.0.
+	\item \href{https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer-2}{Bracket Pair Colorizer 2}. MIT License.
+	\item \href{https://marketplace.visualstudio.com/items?itemName=Dart-Code.dart-code}{Dart}. MIT License.
+	\item \href{https://marketplace.visualstudio.com/items?itemName=Dart-Code.flutter}{Flutter}. MIT License.
+	
+\end{itemize}
+
 \section{Compilación, instalación y ejecución del proyecto}
 
 \section{Pruebas del sistema}
