--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -227,6 +227,11 @@ La segunda tabla es una comprobación de lo que sucede para cada una de las clas
 		\label{table:derivacion}
 	\end{center}
 \end{table}
-\subsection{Pruebas de integración:}
-Confirmar que el conjunto de módulos anteriormente validados funcionen todos en conjunto
+
+\subsection{Pruebas de integración y sistema:}
+Confirmar que el conjunto de módulos anteriormente validados, funcionen todos de manera interrelacionada unos con otros. Para ello lo que se ha hecho es un testeo de funcionamiento en el terminal físico, lo que conlleva un \emph{testing} simultáneo de la interfaz. 
+
+Muchos de los errores son más fáciles de encontrar así, porque en la máquina virtual no funciona de la misma manera, ya que el rendimiento no es el mismo, o las simulaciones son parciales. Uno de los ejemplos que necesite hacer \emph{in situ}, fue el juego online, a la hora de tener que validar que se producían las conexiones entre los terminales.
+
+En estas pruebas de interfaz, se encontraron algunos campos que no eran visibles de manera correcta o que su usabilidad era reducida. Lo que supuso la mejora correspondiente.
 
