Añadido el burndown de sp4 #57

--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -116,6 +116,26 @@ Se estimaron unas 58 horas, pero al final se emplearon 44,5. Todas las tareas se
 \subsection{Sprint 4 (07/07/20 - 10/07/20)}\label{sprint-4-070720---100720}
 La duración de este \emph{Sprint} es de un día menor, porque coincidía el cierre de este en sábado. Por lo que se pasa de los cinco días de duración normal, a cuatro. Lo que se plantea es tener el juego terminado además de añadir un chat que aporte valor añadido.
 
+Las pretensiones para este \emph{sprint} son:
+\begin{itemize}
+	\item Actualizar el contenido de la \emph{Play Store}
+	\item Reunión de seguimiento el viernes 10 julio.
+	\item Control del turno en el juego online.
+	\item Colocación correcta de la ficha.
+	\item Determinar cuando se produce el fin del cuatro en raya.
+	\item Test de que funciona el juego online correctamente.
+	\item Mejoras generales en el rendimiento.
+	\item Indentar y elimnar los warnings del código.
+	\item Capacidad de mandar mensajes entre los jugadores.
+	\item Reunión con amigo para el poster.
+	\item Resolución de algunos problemas.
+\end{itemize}
+
+Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/flutter_serpiente/milestone/4?closed=1}{Sprint 4}
+
+\imagen{burndowns/sp4.png}{Sprint 4.}
+
+Para el cierre el total de las tareas fueron completadas, se planificaron 41 horas, destinando 33 horas para el desarrollo esperado.
 
 \section{Estudio de viabilidad}
 
