--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -194,6 +194,7 @@ En otros casos se han realizado casos de prueba de caja negra para algunas líne
 Dando como resultado las dos siguientes tablas:
 
 La primera de las tablas define las clases de equivalencia que son válidas y las que no.
+\rowcolors {2}{gray!35}{}
 \begin{table}[H]
 	\begin{center}
 		\begin{tabular}{ccc}
@@ -208,6 +209,7 @@ La primera de las tablas define las clases de equivalencia que son válidas y la
 \end{table}
 
 La segunda tabla es una comprobación de lo que sucede para cada una de las clases de equivalencia. Dependiendo de si se produce choque con alguno de los elementos se devuelve true, en el caso de que no se devuelve false.
+\rowcolors {2}{gray!35}{}
 \begin{table}[H]
 	\begin{center}
 		\begin{tabular}{ccc}
