--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -1,3 +1,5 @@
+
+
 @misc{noauthor_knime_nodate,
 	title = {{KNIME} {\textbar} {Open} for {Innovation}},
 	url = {https://www.knime.com/},
@@ -18,3 +20,42 @@
 	note = {Page Version ID: 124679303},
 	file = {Snapshot:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\5YIVDVM9\\index.html:text/html}
 }
+
+@misc{noauthor_android_2020,
+	title = {Android version history},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357},
+	abstract = {The version history of the Android mobile operating system began with the public release of the Android beta on November 5, 2007. The first commercial version, Android 1.0, was released on September 23, 2008. Android is continually developed by Google and the Open Handset Alliance (OHA), and it has seen several updates to its base operating system since the initial release.},
+	language = {en},
+	urldate = {2020-07-12},
+	journal = {Wikipedia},
+	month = jul,
+	year = {2020},
+	note = {Page Version ID: 967286357},
+	file = {Snapshot:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\U5I9XUBN\\index.html:text/html}
+}
+
+@misc{ wiki:versionAndroid,
+    author = "Wikipedia",
+    title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+    year = "2020",
+    url = {https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357},
+    note = "[]"
+}
+
+@misc{ wiki:pegi,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Sistema_de_clasificaci%C3%B3n_de_contenido_de_videojuegos},
+	note = "[]"
+}
+
+@misc{ github:releases,
+	author = {GitHub},
+	title = {Flutter Serpiente Releases},
+	year = "2020",
+	url = {https://github.com/scc0034/flutter_serpiente/releases/tag/V.6.0.0},
+	note = "[]"
+}
+
