Manual de usuario 2 #61

--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -59,3 +59,12 @@
 	note = "[]"
 }
 
+@misc{ wiki:bundle,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Empaquetado_de_aplicaciones},
+	note = "[]"
+}
+
+
