--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -12,7 +12,7 @@ Los requerimientos necesarios para poder ejecutar la aplicación en el teléfono
 	\item
 	Es necesario disponer de conexión a Internet, tanto como para bajarse la aplicación en \emph{Store}, como para usar los servicios, ya que es necesario logearse con \emph{Google}
 	\item La clasificación de contenido, es PEGI 3~\cite{wiki:pegi}. 
-	\item En el caso de que la descarga se realice mediante la tienda oficial, los países para los que la aplicación está disponible son: España, Francia, Portugal e Irlanda. En el caso de que no sea así, será necesario descargar desde Github~\pageref{descargaGit}.
+	\item En el caso de que la descarga se realice mediante la tienda oficial, los países para los que la aplicación está disponible son: España, Francia, Portugal e Irlanda. En el caso de que no sea así, será necesario descargar desde Github, como se explica en la página~\pageref{descargaGit}.
 \end{itemize}
 
 \section{Instalación}
@@ -41,6 +41,7 @@ La manera más cómoda de hacerlo, es dirigirse \href{https://play.google.com/st
 El proceso de instalación es simple, solo tenemos que dar al botón de instalar. En el caso de que nos encontremos en el navegador web, nos deja elegir el dispositivo que tenemos vinculado a nuestra cuenta de \emph{Google}. Si por otra parte nos encontramos desde el terminal, se instalará sin ningún problema.
 
 En el caso de que se lancen nuevas versiones del producto, las actualizaciones se realizarán de forma automática.
+
 \section{Manual del usuario}
 
 
