Manual de usuario 3 #61

--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -43,5 +43,65 @@ El proceso de instalación es simple, solo tenemos que dar al botón de instalar
 En el caso de que se lancen nuevas versiones del producto, las actualizaciones se realizarán de forma automática.
 
 \section{Manual del usuario}
+Se pretende mostrar el funcionamiento de cada una de las ventanas que están disponibles en la aplicación, con el fin de poder informar a los usuarios del funcionamiento de cada una de estas.
+
+Las ventanas de las que consta la aplicación son las siguientes:
+
+\begin{itemize}
+	\tightlist
+	\item Log in.
+	\item Home.
+	\item Menú de los juegos.
+	\item Snake.
+	\item Ranking.
+	\item Cuatro en raya menú.
+	\item Cuatro en raya invitar.
+	\item Cuatro en raya unirse.
+	\item Cuatro en raya juego.
+	\item About.
+	\item Settings.
+\end{itemize}
+
+\subsection{Log in}
+Es la primera ventana que nos encontramos cuando lanzamos la aplicación. Es necesario que nos registremos siempre con la cuenta de \emph{Google} que tengamos disponible, ya que muchos de los servicios están en la nube, no esta permitido el acceso mediante anonimato.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.7\textwidth]{manual/loginpage.jpg}
+	\caption{Log in page}\label{fig:loginpage}
+\end{figure}
+
+Cuando pulsamos en el botón de \emph{sign in with Google}, nos aparecerá la ventana siguiente~\ref{fig:formlog}, donde nos pedirá que ingresemos el usuario de nuestra cuenta de \emph{Google}. También se puede consultar la política de privacidad~\ref{fig:policy}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textwidth]{manual/loginform.jpg}
+	\caption{Formulario sign in}\label{fig:formlog}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textwidth]{manual/policy.jpg}
+	\caption{Política de privacidad}\label{fig:policy}
+\end{figure}
+
+Una vez completemos este proceso, la ventana siguiente a la que nos redirige la aplicación es el Home~\ref{fig:homepage}.
 
 
+\subsection{Home}
+Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú~\ref{fig:homepage}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textwidth]{manual/home.jpg}
+	\caption{Home}\label{fig:homepage}
+\end{figure}
+
+Como podemos ver en la imagen~\ref{fig:homepage}, tenemos un \emph{banner} donde se nos muestra la publicidad, en el caso de que pinchemos en el, nos abrirá el navegador para mostrarnos más datos referentes al producto que se está anunciando. 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textwidth]{manual/menuhome.jpg}
+	\caption{Home}\label{fig:menuhome}
+\end{figure}
+ 
