Manual de usuario 4 #61

--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -51,6 +51,8 @@ Las ventanas de las que consta la aplicación son las siguientes:
 	\tightlist
 	\item Log in.
 	\item Home.
+	\item About.
+	\item Settings.
 	\item Menú de los juegos.
 	\item Snake.
 	\item Ranking.
@@ -58,8 +60,6 @@ Las ventanas de las que consta la aplicación son las siguientes:
 	\item Cuatro en raya invitar.
 	\item Cuatro en raya unirse.
 	\item Cuatro en raya juego.
-	\item About.
-	\item Settings.
 \end{itemize}
 
 \subsection{Log in}
@@ -75,13 +75,13 @@ Cuando pulsamos en el botón de \emph{sign in with Google}, nos aparecerá la ve
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=0.8\textwidth]{manual/loginform.jpg}
+	\includegraphics[height=0.7\textwidth]{manual/loginform.jpg}
 	\caption{Formulario sign in}\label{fig:formlog}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=0.8\textwidth]{manual/policy.jpg}
+	\includegraphics[width=0.7\textwidth]{manual/policy.jpg}
 	\caption{Política de privacidad}\label{fig:policy}
 \end{figure}
 
@@ -89,15 +89,21 @@ Una vez completemos este proceso, la ventana siguiente a la que nos redirige la 
 
 
 \subsection{Home}
-Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú~\ref{fig:homepage}.
+Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú~\ref{fig:menuhome}. Otra de las formas de entrar a este es pulsando el menú hamburguesa.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[height=0.8\textwidth]{manual/home.jpg}
+	\includegraphics[width=0.7\textwidth]{manual/home.jpg}
 	\caption{Home}\label{fig:homepage}
 \end{figure}
 
-Como podemos ver en la imagen~\ref{fig:homepage}, tenemos un \emph{banner} donde se nos muestra la publicidad, en el caso de que pinchemos en el, nos abrirá el navegador para mostrarnos más datos referentes al producto que se está anunciando. 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{manual/banner.jpg}
+	\caption{Banner}\label{fig:banner}
+\end{figure}
+
+Como podemos ver en la imagen~\ref{fig:banner}, tenemos un \emph{banner} donde se nos muestra la publicidad, en el caso de que pinchemos en el, nos abrirá el navegador para mostrarnos más datos referentes al producto que se está anunciando. Es algo que aparecerá durante el resto de la aplicación dependiendo de la página en la que nos encontremos.
 
 \begin{figure}[H]
 	\centering
@@ -105,3 +111,56 @@ Como podemos ver en la imagen~\ref{fig:homepage}, tenemos un \emph{banner} donde
 	\caption{Home}\label{fig:menuhome}
 \end{figure}
  
+Como se aprecia en el menú~\ref{fig:menuhome}, nos encontramos la siguiente lista de opciones, dependiendo de cual sea la que se pulse nos redirigirá a la ventana correspondiente:
+
+\begin{itemize}
+	\item Home~\ref{fig:homepage}.
+	\item Games~\ref{fig:gamespage}.
+	\item Ranking~\ref{fig:rankpage}.
+	\item Settings~\ref{fig:settingspage}.
+	\item About me~\ref{fig:aboutpage}.
+\end{itemize}
+
+En el caso de que queramos salir de la sesión que tenemos abierta, debemos de pulsar en nuestra imagen~\ref{fig:mostrarlogout} y nos sale un cuadro de alerta con las opciones disponibles, pulsaremos en \emph{Sign out}n~\ref{fig:salir}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{manual/mostrarlogout.jpg}
+	\caption{Mostrar sign out}\label{fig:mostrarlogout}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{manual/salir.jpg}
+	\caption{Sign Out}\label{fig:salir}
+\end{figure}
+
+\subsection{Settings}
+Esta apartado del menú, es para manejar las opciones referentes a la aplicación, como podemos ver~\ref{fig:settingspage}. Cada una de estas, es un \emph{slider} o deslizador, que si está activado, quiere decir que está a \emph{true} o verdadero.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=0.8\textwidth]{manual/settings.jpg}
+	\caption{Sign Out}\label{fig:settingspage}
+\end{figure}
+
+Una descripción de lo que hacen cada uno de los ajustes:
+
+\begin{itemize}
+	\item
+\end{itemize}
+
+\subsection{Menú de juegos}
+En este apartados se nos muestra una lista con todos los juegos de la colección que están disponibles, la finalidad es que el usuario pueda decidir, de una manera sencilla a qué quiere jugar. Por lo que es tan simple como pulsar en la opción correspondiente~\ref{fig:gamespage}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{manual/gamespage.jpg}
+	\caption{Games menú}\label{fig:gamespage}
+\end{figure}
+
+
+
+
+
+
